--- a/README.textile
+++ b/README.textile
@@ -92,7 +92,7 @@ required CSS style for the list. Also don't forget to include the javascripts.*
   <pre><code>
     # within the head tags of your layout...
     <%= javascript_include_tag :defaults %>
-    <%= stylesheet 'ajaxful_rating' %>
+    <%= ajaxful_rating_style %>
   </code></pre>
 		
 When a user submits a rating it will call the action in your controller, for
@@ -102,7 +102,12 @@ example (if you added the @rate@ route):
   def rate
     @article = Article.find(params[:id])
     @article.rate(params[:stars], current_user)
-    # some page update here ...
+    id = "ajaxful-rating-article-#{@article.id}"
+    render :update do |page|
+      page.replace_html id, ratings_for(@article, :static)
+      page.insert_html :bottom, id, "Thanks for rating!"
+      page.visual_effect :highlight, id
+    end
   end
   </code></pre>
 
@@ -143,7 +148,7 @@ I'll really appreciate your feedback, please contact me at edgar.js[at]gmail.com
 
 h2. Credits
 
-The helper's style is from http://www.komodomedia.com/blog/2007/01/css-star-rating-redux/ with author's permission.
+The helper's style is from "komodomedia":http://www.komodomedia.com/blog/2007/01/css-star-rating-redux/ with author's permission.
 
 h2. License
 
