--- a/README.textile
+++ b/README.textile
@@ -26,7 +26,7 @@ Also this generator copies the necesary images, styles, etc.
 
 Example:
 
-  #I suppose you have generated already an authenticated model.
+  I suppose you have generated already an authenticated model.
   script/generate authenticated user sessions
   
   script/generate ajaxful_rating user
@@ -147,6 +147,8 @@ I decided to jump directly to version 2.0 because there are many important chang
 checkout the version 1.0 from the repository though.
 
 h2. Feedback
+
+If you find bugs please open a ticket at "http://edgarjs.lighthouseapp.com/projects/21005-ajaxful-rating/overview":http://edgarjs.lighthouseapp.com/projects/21005-ajaxful-rating/overview
 
 I'll really appreciate your feedback, please contact me at edgar.js[at]gmail.com
 
