--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Ajaxful Rating
 
-Provides a simple way to add rating functionality to your application. (Modified to allow 'dimensional' ratings, or ratings for multiple dimensions of a single model. Note: cached ratings don't work in this fork.)
+Provides a simple way to add rating functionality to your application.
 
 h2. Repository
 
@@ -40,21 +40,12 @@ customise this call:
 * @:stars@ Max number of stars that can be submitted.
 * @:allow_update@ Set to true if you want users to be able to update their votes.
 * @:cache_column@ Name of the column for storing the cached rating average.
-* @:dimensions@ Array of dimensions (strings) 
 
   <pre><code>
   class Article < ActiveRecord::Base
     ajaxful_rateable :stars => 10
   end
   </code></pre>
-
-Or, if you want to use dimensions, something like:
-
-	<pre><code>
-	class Article < ActiveRecord::Base
-	  ajaxful_rateable :dimensions => ['spelling', 'creativity']
-	end
-	</code></pre>
 
 Then you need to add a call @ajaxful_rater@ in the user model. This includes a simple line so
 you can add it _by your own_ as well (@has_many :rates@).
@@ -97,15 +88,6 @@ correct action in your controller:
   <%= ratings_for @article, :remote_options => {:url => your_rate_path(@article)} %>
   </code></pre>
 
-To display the ratings for a particular dimension:
-
-  <pre><code>
-  <%= ratings_for @article, :dimension => 'spelling' %>
-  </code></pre>
-	
-This will use only ratings on the article that have the string 'spelling' set as their dimension column.
-
-
 *To display the stars properly you need to add a call in the head of your layout, which will generate the
 required CSS style for the list. Also don't forget to include the javascripts.*
 
@@ -131,27 +113,9 @@ example (if you added the @rate@ route):
   end
   </code></pre>
 
-Or, to add a rating on a dimension:
-
-@article.rate(params[:stars], current_user, 'spelling')
-
 There are some more options for this helper, please see the rdoc for details.
 
-h3. Namespaces
-
-If you use the plugin inside a namespace you'll need to specify the rating url which should points to a controller inside a namespace. Your files should be like these:
-
-  <pre><code>
-  routes.rb:
-  map.namespace :admin do |admin|
-    admin.resources :articles, :member => {:rate => :post}
-  end
-  
-  views/admin/articles/show.html.erb
-  <%= ratings_for @article, :remote_options => {:url => rate_admin_article_path(@article)} %>
-  </code></pre>
-
-h3. Cache (Note: caching is broken in this dimensions fork)
+h3. Cache
 
 To cache the model's rating average add a column named @rating_average@ to your model table:
 
@@ -199,3 +163,4 @@ h2. License
 This code is released under Creative Commons Attribution-Share Alike 3.0 license.
 
 !http://i.creativecommons.org/l/by-sa/3.0/88x31.png!:http://creativecommons.org/licenses/by-sa/3.0/
+
