small change in the cache column migration, specify scale and precision

--- a/README.textile
+++ b/README.textile
@@ -175,7 +175,7 @@ To cache the model's rating average add a column named @rating_average@ to your 
   <pre><code>
   class AddRatingAverageToArticles < ActiveRecord::Migration
     def self.up
-      add_column :articles, :rating_average, :decimal, :default => 0
+      add_column :articles, :rating_average, :decimal, :default => 0, :precision => 6, :scale => 2
     end
   
     def self.down
