--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
 == 2.1.0 July 25, 2009
 * AjaxfulRating is now available as a gem
+
+== 2.1.4 January 25, 2010
+* Added option for showing current_user's rate instead of global average
